--- a/assets/css/leafletMainStyle.css
+++ b/assets/css/leafletMainStyle.css
@@ -8,14 +8,14 @@
   bottom: 0;
   left: 0;
   opacity: 0.5;
-  z-index: 10002;
+  
   
 }
 #loading-img {
   position: fixed;
   top: 50%;
   left: 50%;
-
+  z-index: 10001;
 }
 
 body { 
@@ -27,17 +27,26 @@ body {
   height: 85vh; 
   width: 98vw; 
   margin: 0 auto;
+  background-color: #67bfe7;
 }
 
 .leaflet-container {
   background-color:rgba(255,0,0,0.0);
 }
+
+.modal-dialog{
+  overflow-y: initial !important
+}
 .modal-body {
-  height: auto;
+  height: 70vh;
   overflow-y: auto;
   color: #000000;
   border-color: white;
   background-color: #67bfe7;
+}
+
+.short-modal{
+  height: auto;
 }
 
 .modal-header,
