--- a/assets/css/leafletMainStyle.css
+++ b/assets/css/leafletMainStyle.css
@@ -116,7 +116,7 @@ table, th, tr {
 
 /* Carousel base class */
 .carousel {
-  margin-bottom: 4rem;
+  margin-bottom: 0;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
