updated .modal-body to 5caed3

--- a/assets/css/leafletMainStyle.css
+++ b/assets/css/leafletMainStyle.css
@@ -54,7 +54,7 @@ body {
   overflow-y: auto;
   color: #000000;
   border-color: white;
-  background-color: #67bfe7;
+  background-color: #5caed3;
 }
 
 .short-modal{
