--- a/assets/css/leafletMainStyle.css
+++ b/assets/css/leafletMainStyle.css
@@ -79,17 +79,17 @@ table, th, tr {
   background-color: white;
 }
 /* UNESCO marker popup */
-#unescoContainer {
+.markerContainer {
   max-height: 40vh;
   padding-right: 1rem;
   overflow-y: auto;
 }
-#unescoThumbnail {
+.markerThumbnail {
   float: left;
   padding: 0.5rem;
 }
 
-#unescoDescription {
+.markerTxtDescription {
   font-size: 1rem;
 }
 
